Se creó con Colab

--- a/ProyectoDSParteI_Heredia.ipynb
+++ b/ProyectoDSParteI_Heredia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlH4IuZHp7q3lLOlkQGPkL",
+      "authorship_tag": "ABX9TyMht1IpppUxhjyFUeaqLY2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Proyecto Final – Parte I  \n",
+        "# Proyecto DataScience – Parte I  \n",
         "## Autor: Andrés Heredia  \n",
         "### Dataset: Netflix Movies and TV Shows  \n",
         "\n",
@@ -39,7 +39,7 @@
         "\n",
         "Este proyecto tiene como propósito realizar un análisis exploratorio y visual del dataset **“Netflix Movies and TV Shows”**, el cual recopila información sobre las películas y series disponibles en la plataforma de streaming Netflix. Este conjunto de datos incluye variables como el tipo de contenido (película o serie), país de origen, género, año de lanzamiento, clasificación por edades, director y duración.\n",
         "\n",
-        "El objetivo principal es identificar patrones relevantes que describan el crecimiento y diversificación del catálogo de Netflix a lo largo del tiempo, así como analizar la relación entre el tipo de contenido, el país de producción y la clasificación por edades. A través de técnicas de análisis univariado, bivariado y multivariado, se busca obtener conclusiones visuales y numéricas que permitan responder preguntas clave sobre las tendencias en la producción de contenidos.\n",
+        "El objetivo principal es identificar patrones relevantes que describan el crecimiento y diversificación del catálogo de Netflix a lo largo del tiempo, así como analizar la relación entre el tipo de contenido, el país de producción y la clasificación por edades. A través de técnicas de análisis bariado y se busca obtener conclusiones visuales y numéricas que permitan responder preguntas clave sobre las tendencias en la producción de contenidos.\n",
         "\n",
         "El trabajo se apoya en las librerías de Python **Pandas**, **Matplotlib** y **Seaborn** para la manipulación y visualización de datos. En una primera instancia se realiza una inspección general del dataset, identificando valores faltantes y distribuciones de las principales variables. Posteriormente, se crean visualizaciones que permiten explorar las relaciones entre variables, por ejemplo: el año de lanzamiento frente al tipo de contenido, la distribución de clasificaciones según el país y la duración promedio en función del tipo de programa.\n",
         "\n",
